# jage

./: JAGE .sln  LearnOpenGL.sln  README.md
JAGE/: CMakeLists.txt  JAGE.vcxproj  JAGE.vcxproj.filters  imgui.ini  main.cpp  ~AutoRecover.JAGE.vcxproj
JAGE/Assets/Meshes/ak47/: ak47.mtl
JAGE/Assets/Shaders/: camera.glsl  constants.glsl  csm.frag  csm.geom  csm.glsl  csm.vert  csm_shadow_map.geom  csm_shadow_map.vert  gaussian_blur.glsl  gaussian_blur_h.frag  gaussian_blur_v.frag  gbuffer.frag  gbuffer.vert  lighting.frag  lighting.glsl  meshes.glsl  point_shadow_map.frag  point_shadow_map.geom  point_shadow_map.vert  post_fx.frag  samplers.glsl  screen.frag  screen.vert  shadow_map.frag  shadow_map_chebysev.vert  shadow_map_hblur.frag  shadow_map_vblur.frag  ssao.frag  ssao_blur.frag  vsm.frag  vsm.vert
JAGE/Assets/Shaders/PreProcessed/: csm.frag  csm.geom  csm.vert  gaussian_blur_h.frag  gaussian_blur_v.frag  gbuffer.frag  gbuffer.vert  lighting.frag  point_shadow_map.frag  point_shadow_map.geom  point_shadow_map.vert  post_fx.frag  screen.frag  shadow_map.frag  shadow_map.vert  ssao.frag  ssao.vert  ssao_blur.frag  vsm.frag
JAGE/Config/: Input.ini  Rendering.ini
JAGE/Engine/: Common.h  Config.h  Engine.cpp  Engine.h  LogDisplay.h  Logging.h  Utils.h
JAGE/Engine/Core/: AssetLoader.cpp  AssetLoader.h  AssetManager.h  Config.h  Core.h  Input.cpp  Input.h  Utils.h  Window.cpp  Window.h
JAGE/Engine/Core/Assets/: AssetLoader.cpp  AssetLoader.h  AssetManager.h  GameAsset.h  Material.h  Mesh.h  MeshModel.h  Texture.h
JAGE/Engine/Core/Types/: GameAsset.h  Material.h  Mesh.h  MeshModel.h  StaticMesh.h  Texture.h
JAGE/Engine/Defaults/: Textures.h
JAGE/Engine/ECS/: ComponentArray.h  EntityManager.h  SystemManager.cpp  SystemManager.h
JAGE/Engine/ECS/Components/: Camera.h  Character.h  Collider.h  DirectionalLight.h  PointLight.h  RigidBody.h  StaticMeshRenderer.h  Transform.h
JAGE/Engine/ECS/Systems/: CharacterSystem.cpp  CharacterSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  PlayerSystem.cpp  PlayerSystem.h  RenderSystem.cpp  RenderSystem.h  System.h  TransformSystem.cpp  TransformSystem.h
JAGE/Engine/Editor/: Editor.cpp  Editor.h
JAGE/Engine/Editor/Viewers/: EntityViewer.h
JAGE/Engine/Editor/Widgets/Components/: ComponentWidget.h  TransformWidget.h
JAGE/Engine/Input/: KeyboardInput.cpp  KeyboardInput.h  MouseInput.cpp  MouseInput.h
JAGE/Engine/Physics/: Physics.cpp  Physics.h
JAGE/Engine/Physics/Colliders/: Collider.h
JAGE/Engine/Renderer/: API.cpp  API.h  OpenGL.cpp  OpenGL.h  OpenGLUtils.h  OpenGlApi.cpp  OpenGlApi.h  Settings.h  ShaderPreProcessor.h
JAGE/Engine/Renderer/Types/: Buffer.h  DrawIndirectBuffer.h  ElementArrayBuffer.h  FrameBuffer.h  IBindable.h  Shader.h  ShaderStorageBuffer.h  Texture.h  Texture2D.h  Types.h  UniformBuffer.h  VertexArray.h  VertexArrayObject.h  VertexBuffer.h
JAGE/Engine/World/: World.cpp  World.h
LearnOpenGL/: LearnOpenGL.vcxproj  LearnOpenGL.vcxproj.filters  glad.c  main.cpp
LearnOpenGL/Assets/Meshes/AbandonedCottage/: cottage.mtl
LearnOpenGL/Assets/Shaders/: blit.frag.glsl  gbuffer.frag  gbuffer.frag.glsl  gbuffer.vert  lit_deferred.frag.glsl  point_shadow_map.frag  point_shadow_map.geom  point_shadow_map.vert  shadow_map.vert  static_geometry.vert.glsl  unlit_deferred.frag.glsl
LearnOpenGL/Engine/: AssetLoader.cpp  AssetLoader.h  AssetManager.cpp  AssetManager.h  ComponentArray.h  ComponentManager.cpp  ComponentManager.h  Core.h  Engine.cpp  Engine.h  EntityManager.h  GameAsset.h  IComponentArray.h  Material.h  MeshModel.h  PhysicsSystem.cpp  PhysicsSystem.h  PlayerSystem.cpp  PlayerSystem.h  RenderSystem.cpp  RenderSystem.h  Shader.cpp  Shader.h  StaticMesh.h  System.h  SystemManager.h  Texture.h  Utils.h  World.h
LearnOpenGL/Engine/Assets/: AssetLoader.cpp  AssetLoader.h  AssetManager.h
LearnOpenGL/Engine/Assets/Types/: GameAsset.h  Material.h  MeshModel.h  StaticMesh.h  Texture.h
LearnOpenGL/Engine/Components/: Camera.h  DirectionalLight.h  PlayerMovement.h  PointLight.h  RigidBody.h  StaticMeshRenderer.h  Transform.h
LearnOpenGL/Engine/Core/: AssetLoader.cpp  AssetLoader.h  AssetManager.h  Core.h
LearnOpenGL/Engine/Core/Types/: GameAsset.h  StaticMesh.h  Texture.h
LearnOpenGL/Engine/Defaults/: Models.h
LearnOpenGL/Engine/ECS/: ComponentArray.h  ComponentManager.h  EntityManager.h  SystemManager.cpp  SystemManager.h
LearnOpenGL/Engine/ECS/Components/: Camera.h  DirectionalLight.h  PlayerMovement.h  PointLight.h  RigidBody.h  StaticMeshRenderer.h  Transform.h
LearnOpenGL/Engine/ECS/Systems/: PhysicsSystem.cpp  PhysicsSystem.h  PlayerSystem.cpp  PlayerSystem.h  RenderSystem.cpp  RenderSystem.h  System.h
LearnOpenGL/Engine/Input/: KeyboardInput.cpp  KeyboardInput.h  MouseInput.cpp  MouseInput.h
LearnOpenGL/Engine/Renderer/: OpenGL.cpp  OpenGL.h  Shaders.h
LearnOpenGL/Engine/Renderer/Types/: DrawIndirectBuffer.h  ElementArrayBuffer.h  FrameBuffer.h  Shader.h  ShaderStorageBuffer.h  Texture2D.h  TextureCubemapArray.h  Types.h  UniformBuffer.h  VertexArrayBuffer.h  VertexBuffer.h
LearnOpenGL/Engine/World/: World.cpp  World.h
